# -license-plates

./: .gitignore  README.md  pyproject.toml  ТЗ.md
license_plates_images/results/4_cars/: detected.json
license_plates_images/results/C602OT18/: detected.json
license_plates_images/results/E008EE77/: detected.json
license_plates_images/results/O099OO99/: detected.json
license_plates_images/results/O999OO77/: detected.json
license_plates_images/results/priora/: detected.json
license_plates_images/results/М640РВ72/: detected.json
priora/: detected.json
src/: image_loader.py  main.py  plate_detector.py  text_detection.py  utils.py
